kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fashionista-ingress
  namespace: fashionista
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx 
  rules:
    - host: fashionista.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fashionista-frontend
                port:
                  number: 80
